deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obesity-deployment
  labels:
    app: obesity-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obesity-api
  template:
    metadata:
      labels:
        app: obesity-api
    spec:
      containers:
      - name: obesity-container
        image: ashxivy/applied_statistics:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
