deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obesity-service
spec:
  selector:
    app: obesity-api 
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 8000
